test/golden/-2790183683378081595.golden

INITIALPATH:7:22: error:
    • INITIALPATH:7:28:
  |
7 | main = putStrLn [fmt|{pi:.{}}|]
  |                            ^

unexpected "}"
expecting an haskell expression

    • In the quasi-quotation: [fmt|{pi:.{}}|]
  |
7 | main = putStrLn [fmt|{pi:.{}}|]
  |                      ^^^^^^^^^^
